tests/negative/neg_channel_access_component.safe
-- Test: neg_channel_access_component
-- Description: Channel element types shall not be composites containing access-type components.
--   Anonymous access subcomponents are rejected just like named access fields.
-- Expected: REJECT source_frontend_error

package Neg_Channel_Access_Component

   type Payload is record
      Value : Integer;


   type Envelope is record
      Item : access Payload;


   channel Data_Ch : Envelope capacity 1;


